fixing ie alignment

--- a/html/css/style.css
+++ b/html/css/style.css
@@ -3,6 +3,7 @@
 html, body { margin: 0; padding: 0; }
 body {
     background: url('../images/yellow.jpg') #FFFF00;
+    text-align:center;
 }
 a:link,
 a:visited { 
@@ -31,6 +32,7 @@ div#wrapper {
     margin: 0 auto;
     padding: 0;
     background: url('../images/gold.jpg') #FCEE21;
+    text-align:center;
 }
 #container {
     width: 900px;
@@ -39,6 +41,7 @@ div#wrapper {
     padding-bottom: 40px;
     color: #fff;
     font: 14pt 'Rokkitt', helvetica, arial, sans-serif;
+    text-align:center;
 }
 .text { margin-bottom: 27px; }
 #home .text {
@@ -77,6 +80,7 @@ div#wrapper {
     box-shadow: 0px 4px 8px 0 #211F07;
     -moz-box-shadow: 0px 4px 8px 0 #211F07;
     -webkit-box-shadow: 0px 4px 8px 0 #211F07;
+    text-align:left;
 }
 body.cuisine #content-area {
     background: url('../images/bluec.jpg') #0071BC;
